// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text area Disabled renders correctly 1`] = `
<jest>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    disabled=""
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</jest>
`;

exports[`Text area Invalid renders correctly 1`] = `
<jest>
  <textarea
    class="ecl-text-area ecl-text-area--invalid ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</jest>
`;

exports[`Text area Optional renders correctly 1`] = `
<jest>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</jest>
`;

exports[`Text area Optional renders correctly with extra attributes 1`] = `
<jest>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</jest>
`;

exports[`Text area Optional renders correctly with extra class names 1`] = `
<jest>
  <textarea
    class="ecl-text-area ecl-text-area--m custom-class custom-class--test"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</jest>
`;

exports[`Text area Optional renders correctly with extra group class names 1`] = `
<jest>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</jest>
`;

exports[`Text area Optional renders correctly with extra label class names 1`] = `
<jest>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</jest>
`;

exports[`Text area Required renders correctly 1`] = `
<jest>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    required=""
    rows="4"
  />
</jest>
`;
